package org.example.board;

public class Kazans {
    public static final int WHITE_KAZAN = 0;
    public static final int BLACK_KAZAN = 1;

    private final int[] kazans;
}