package org.example.domain.facade;

import org.example.domain.board.BoardState;
import org.example.domain.board.CurrentPlayer;
import org.example.domain.board.Holes;
import org.example.domain.strategy.MoveStrategyFactory;
import org.example.domain.observer.IStateObserver;
import org.example.domain.game.IGameState;
import org.example.domain.game.GameStateImpl;
import org.example.domain.strategy.IMoveStrategy;

import java.util.ArrayList;
import java.util.List;

public class ToguzBoard {

}